<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">GPS Tracker Client</string>

	<string name="start_tracking">Start tracking</string>
	<string name="stop_tracking">Stop tracking</string>
	<string name="upload_tracking_data">Upload tracking data</string>
	<string name="show_map">Show map</string>
	<string name="show_info">Show info</string>
	<string name="clear_tracking_data">Clear tracking data</string>

</resources>
