<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true" >

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:context=".GpsTrackerActivity" >

		<Button
			android:id="@+id/startButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:text="@string/start_tracking" />

		<Button
			android:id="@+id/stopButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/startButton"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:text="@string/stop_tracking" />

		<Button
			android:id="@+id/uploadButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/stopButton"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:text="@string/upload_tracking_data" />

		<Button
			android:id="@+id/mapButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/uploadButton"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:text="@string/show_map" />

		<Button
			android:id="@+id/infoButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/mapButton"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:text="@string/show_info" />

		<Button
			android:id="@+id/clearButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/infoButton"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:text="@string/clear_tracking_data" />

	</RelativeLayout>

</ScrollView>
